[package]
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
categories = ["embedded", "no-std"]
description = "An example of using the pwm-pca9685 crate to control servos."
keywords = ["pwm", "servo", "pca9685"]
license = "MIT OR Apache-2.0"
name = "pca9685-demo"
version = "0.1.0"
edition = "2018"

[dependencies]
pwm-pca9685 = { git = "https://github.com/eldruin/pwm-pca9685-rs" }
cortex-m = "0.5.0"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
stm32f30x = "*"
f3 = "*"
panic-abort = "*"

[profile.release]
codegen-units = 1 # better optimizations
debug = true
lto = true # better optimizations
